--- a/Project/Assets/StreamingAssets/Config/config.json
+++ b/Project/Assets/StreamingAssets/Config/config.json
@@ -1,1 +1,21 @@
-﻿{    "logPort" : 11011,    "pacMan" : {        "appIdentifier" : "Pac-Man",        "host" : "localhost",        "port" : 11012,        "map" : "PacMan_1",        "beanRespawnInterval" : 3.0,        "beanTotal" : 20,        "beanSpawnRadius" : 20.0,        "maxConnection" : 2    }}
+﻿{
+    "logPort": 11011,
+    "pacMan": {
+        "appIdentifier": "Test",
+        "host": "localhost",
+        "port": 11012,
+        "map": "PacMan_1",
+        "beanRespawnInterval": 3.0,
+        "beanTotal": 20,
+        "beanSpawnRadius": 20.0,
+        "maxConnection": 2
+    },
+    "server": {
+        "tickrate": 0.015,
+        "updaterate": 0.045
+    },
+    "client": {
+        "tickrate": 0.015,
+        "cmdrate": 0.03
+    }
+}
