editor脚本,修复一个bug
SyncManager做lerping的时候, 考虑渲染update时间间隔小于server.updaterate的情况

--- a/Project/Assets/StreamingAssets/Config/config.json
+++ b/Project/Assets/StreamingAssets/Config/config.json
@@ -16,6 +16,7 @@
     },
     "client": {
         "tickrate": 0.015,
-        "cmdrate": 0.03
+        "cmdrate": 0.03,
+        "lerpdelay": 0.09
     }
 }
