--- a/Project/Assets/StreamingAssets/Config/config.json
+++ b/Project/Assets/StreamingAssets/Config/config.json
@@ -2,7 +2,7 @@
     "logPort": 11011,
     "simulatedDuplicatesChance": 0.0,
     "simulatedLoss": 0.0,
-    "simulatedMinimumLatency": 0.0,
+    "simulatedMinimumLatency": 0.05,
     "simulatedRandomLatency": 0.0,
 
     "pacMan": {
@@ -15,12 +15,9 @@
         "beanSpawnRadius": 20.0,
         "maxConnection": 2
     },
+
     "tickrate": 0.03,
-    "server": {
-        "updaterate": 0.06
-    },
-    "client": {
-        "cmdrate": 0.06,
-        "lerpdelay": 0.12
-    }
+    "updaterate": 0.06,
+    "cmdrate": 0.06,
+    "cachesnapshots": 2
 }
